--- a/.github/workflows/master_socialnetworkmini.yml
+++ b/.github/workflows/master_socialnetworkmini.yml
@@ -19,7 +19,10 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: '11'
-
+         
+    - name: Run the Maven verify phase
+      run: mvn -B verify --file pom.xml
+    
     - name: Build with Maven
       run: mvn clean install
 
