--- a/pom.xml
+++ b/pom.xml
@@ -1,135 +1,134 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.0</version>
-        <relativePath/>
-        <!-- lookup parent from repository -->
-    </parent>
-    <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>demo</name>
-    <description>Demo project for Spring Boot</description>
-    <properties>
-        <java.version>11</java.version>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.5.6</version>
-        </dependency>
-        <!--mysql jdbc driver-->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.18</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>2.0.1.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>4.1.0.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-            <version>7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
-            <version>3.0.0</version>
-        </dependency>
-    </dependencies>
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**/*.xml</include>
-                </includes>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-maven-plugin</artifactId>
-                <version>0.2</version>
-                <executions>
-                    <execution>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>
-                    <outputFileName>openapi.json</outputFileName>
-                    <outputDir>${project.build.directory}</outputDir>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>com.microsoft.azure</groupId>
-                <artifactId>azure-webapp-maven-plugin</artifactId>
-                <version>1.12.0</version>
-                <configuration>
-                    <schemaVersion>v2</schemaVersion>
-                    <subscriptionId>93dda634-0186-4238-aea8-c146df85fda0</subscriptionId>
-                    <resourceGroup>SocialNetwork-resource</resourceGroup>
-                    <appName>SocialNetworkMini</appName>
-                    <pricingTier>F1</pricingTier>
-                    <region>southeastasia</region>
-                    <runtime>
-                        <os>Windows</os>
-                        <javaVersion>Java 11</javaVersion>
-                        <webContainer>Java SE</webContainer>
-                    </runtime>
-                    <deployment>
-                        <resources>
-                            <resource>
-                                <directory>${project.basedir}/target</directory>
-                                <filtering>false</filtering>
-                                <includes>
-                                    <include>*.jar</include>
-                                </includes>
-                            </resource>
-                        </resources>
-                    </deployment>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">  
+  <modelVersion>4.0.0</modelVersion>  
+  <parent> 
+    <groupId>org.springframework.boot</groupId>  
+    <artifactId>spring-boot-starter-parent</artifactId>  
+    <version>2.4.0</version>  
+    <relativePath/>  
+    <!-- lookup parent from repository --> 
+  </parent>  
+  <groupId>com.example</groupId>  
+  <artifactId>demo</artifactId>  
+  <version>0.0.1-SNAPSHOT</version>  
+  <name>demo</name>  
+  <description>Demo project for Spring Boot</description>  
+  <properties> 
+    <java.version>11</java.version> 
+  </properties>  
+  <dependencies> 
+    <dependency> 
+      <groupId>org.springframework.boot</groupId>  
+      <artifactId>spring-boot-starter-web</artifactId> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.springframework.boot</groupId>  
+      <artifactId>spring-boot-starter-validation</artifactId> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.springframework.boot</groupId>  
+      <artifactId>spring-boot-starter-test</artifactId>  
+      <scope>test</scope> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.mybatis</groupId>  
+      <artifactId>mybatis</artifactId>  
+      <version>3.5.6</version> 
+    </dependency>  
+    <!--mysql jdbc driver-->  
+    <dependency> 
+      <groupId>mysql</groupId>  
+      <artifactId>mysql-connector-java</artifactId>  
+      <version>8.0.18</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>javax.validation</groupId>  
+      <artifactId>validation-api</artifactId>  
+      <version>2.0.1.Final</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.hibernate</groupId>  
+      <artifactId>hibernate-validator</artifactId>  
+      <version>4.1.0.Final</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>javax</groupId>  
+      <artifactId>javaee-web-api</artifactId>  
+      <version>7.0</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.springdoc</groupId>  
+      <artifactId>springdoc-openapi-ui</artifactId>  
+      <version>1.5.0</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.springfox</groupId>  
+      <artifactId>springfox-boot-starter</artifactId>  
+      <version>3.0.0</version> 
+    </dependency> 
+  </dependencies>  
+  <build> 
+    <resources> 
+      <resource> 
+        <directory>src/main/java</directory>  
+        <includes> 
+          <include>**/*.xml</include> 
+        </includes> 
+      </resource> 
+    </resources>  
+    <plugins> 
+      <plugin> 
+        <groupId>org.springdoc</groupId>  
+        <artifactId>springdoc-openapi-maven-plugin</artifactId>  
+        <version>0.2</version>  
+        <executions> 
+          <execution> 
+            <phase>integration-test</phase>  
+            <goals> 
+              <goal>generate</goal> 
+            </goals> 
+          </execution> 
+        </executions>  
+        <configuration> 
+          <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>  
+          <outputFileName>openapi.json</outputFileName>  
+          <outputDir>${project.build.directory}</outputDir> 
+        </configuration> 
+      </plugin>  
+      <plugin> 
+        <groupId>org.springframework.boot</groupId>  
+        <artifactId>spring-boot-maven-plugin</artifactId> 
+      </plugin>  
+      <plugin> 
+        <groupId>com.microsoft.azure</groupId>  
+        <artifactId>azure-webapp-maven-plugin</artifactId>  
+        <version>1.12.0</version>  
+        <configuration> 
+          <schemaVersion>v2</schemaVersion>  
+          <subscriptionId>93dda634-0186-4238-aea8-c146df85fda0</subscriptionId>  
+          <resourceGroup>SocialNetwork-resource</resourceGroup>  
+          <appName>SocialNetworkMini</appName>  
+          <pricingTier>D1</pricingTier>  
+          <region>southeastasia</region>  
+          <runtime> 
+            <os>Windows</os>  
+            <javaVersion>Java 11</javaVersion>  
+            <webContainer>Java SE</webContainer> 
+          </runtime>  
+          <deployment> 
+            <resources> 
+              <resource> 
+                <directory>${project.basedir}/target</directory>  
+                <filtering>false</filtering>  
+                <includes> 
+                  <include>*.jar</include> 
+                </includes> 
+              </resource> 
+            </resources> 
+          </deployment> 
+        </configuration> 
+      </plugin> 
+    </plugins> 
+  </build> 
 </project>
