--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,8 @@
       <version>3.0.0</version> 
     </dependency> 
   </dependencies>  
-  <build> 
+  <build>
+    <finalName>app</finalName>
     <resources> 
       <resource> 
         <directory>src/main/java</directory>  
