Revert "[TruongTN] Test deploy"
This reverts commit 4e261726c180c888b0a8dbecd4b02d8869eae7d3.

--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
                 <directory>${project.basedir}/target</directory>  
                 <filtering>false</filtering>  
                 <includes> 
-                  <include>**/*.jar</include>
+                  <include>*.jar</include> 
                 </includes> 
               </resource> 
             </resources> 
