--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,8 @@
       <version>3.0.0</version> 
     </dependency> 
   </dependencies>  
-  <build> 
+  <build>
+    <finalName>ROOT</finalName>
     <resources> 
       <resource> 
         <directory>src/main/java</directory>  
@@ -100,39 +101,39 @@
         <groupId>org.springframework.boot</groupId>  
         <artifactId>spring-boot-maven-plugin</artifactId> 
       </plugin>  
-      <plugin> 
-        <groupId>com.microsoft.azure</groupId>  
-        <artifactId>azure-webapp-maven-plugin</artifactId>  
-        <version>1.12.0</version>  
-        <configuration> 
-          <resourceGroup>SocialNetwork-resource</resourceGroup>  
-          <appName>SocialNetworkMini</appName>  
-          <pricingTier>S1</pricingTier>  
-          <region>southeastasia</region>  
-          <runtime> 
-            <os>Windows</os>  
-            <javaVersion>Java 11</javaVersion>  
-            <webContainer>Java SE</webContainer> 
-          </runtime>  
-          <!--          <appSettings>-->  
-          <!--            <property>-->  
-          <!--              <name>JAVA_OPTS</name>-->  
-          <!--              <value>-Dserver.port=80</value>-->  
-          <!--            </property>-->  
-          <!--          </appSettings>-->  
-          <deployment> 
-            <resources> 
-              <resource> 
-                <directory>${project.basedir}/target</directory>  
-                <filtering>false</filtering>  
-                <includes> 
-                  <include>**/*.jar</include>
+      <plugin>
+        <groupId>com.microsoft.azure</groupId>
+        <artifactId>azure-webapp-maven-plugin</artifactId>
+        <version>1.12.0</version>
+        <configuration>
+          <resourceGroup>SocialNetwork-resource</resourceGroup>
+          <appName>SocialNetworkMini</appName>
+          <pricingTier>S1</pricingTier>
+          <region>southeastasia</region>
+          <runtime>
+            <os>Windows</os>
+            <javaVersion>Java 11</javaVersion>
+            <webContainer>Java SE</webContainer>
+          </runtime>
+          <!--          <appSettings>-->
+          <!--            <property>-->
+          <!--              <name>JAVA_OPTS</name>-->
+          <!--              <value>-Dserver.port=80</value>-->
+          <!--            </property>-->
+          <!--          </appSettings>-->
+          <deployment>
+            <resources>
+              <resource>
+                <directory>${project.basedir}/target</directory>
+                <filtering>false</filtering>
+                <includes>
+                  <include>*.jar</include>
                 </includes>
-              </resource> 
-            </resources> 
-          </deployment> 
-        </configuration> 
-      </plugin> 
+              </resource>
+            </resources>
+          </deployment>
+        </configuration>
+      </plugin>
     </plugins> 
   </build> 
 </project>
