--- a/pom.xml
+++ b/pom.xml
@@ -70,16 +70,16 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>app</finalName>
-        <resources>
-            <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**/*.xml</include>
-                    <include>**/*.config</include>
-                </includes>
-            </resource>
-        </resources>
+<!--        <finalName>app</finalName>-->
+<!--        <resources>-->
+<!--            <resource>-->
+<!--                <directory>src/main/java</directory>-->
+<!--                <includes>-->
+<!--                    <include>**/*.xml</include>-->
+<!--                    <include>**/*.config</include>-->
+<!--                </includes>-->
+<!--            </resource>-->
+<!--        </resources>-->
         <plugins>
             <plugin>
                 <groupId>org.springdoc</groupId>
@@ -103,38 +103,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>com.microsoft.azure</groupId>
-                <artifactId>azure-webapp-maven-plugin</artifactId>
-                <version>1.12.0</version>
-                <configuration>
-                    <resourceGroup>SocialNetwork-resource</resourceGroup>
-                    <appName>SocialNetworkMini</appName>
-                    <pricingTier>S1</pricingTier>
-                    <region>southeastasia</region>
-                    <runtime>
-                        <os>Windows</os>
-                        <javaVersion>Java 11</javaVersion>
-                        <webContainer>Java SE</webContainer>
-                    </runtime>
-                    <appSettings>
-                        <property>
-                            <name>JAVA_OPTS</name>
-                            <value>-Dserver.port=80</value>
-                        </property>
-                    </appSettings>
-                    <deployment>
-                        <resources>
-                            <resource>
-                                <directory>${project.basedir}/target</directory>
-                                <includes>
-                                    <include>*.jar</include>
-                                </includes>
-                            </resource>
-                        </resources>
-                    </deployment>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>com.microsoft.azure</groupId>-->
+<!--                <artifactId>azure-webapp-maven-plugin</artifactId>-->
+<!--                <version>1.12.0</version>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 </project>
