--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,14 @@
   <parent> 
     <groupId>org.springframework.boot</groupId>  
     <artifactId>spring-boot-starter-parent</artifactId>  
-    <version>2.4.0</version>  
-    <relativePath/>  
+    <version>2.4.0</version>
+    <relativePath/>
     <!-- lookup parent from repository --> 
   </parent>  
   <groupId>com.example</groupId>  
   <artifactId>demo</artifactId>  
-  <version>0.0.1-SNAPSHOT</version>  
+  <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
   <name>demo</name>  
   <description>Demo project for Spring Boot</description>  
   <properties> 
@@ -98,10 +99,14 @@
           <outputDir>${project.build.directory}</outputDir> 
         </configuration> 
       </plugin>  
-      <plugin> 
-        <groupId>org.springframework.boot</groupId>  
-        <artifactId>spring-boot-maven-plugin</artifactId> 
-      </plugin>  
+<!--      <plugin> -->
+<!--        <groupId>org.springframework.boot</groupId>  -->
+<!--        <artifactId>spring-boot-maven-plugin</artifactId> -->
+<!--      </plugin>-->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+      </plugin>
       <plugin> 
         <groupId>com.microsoft.azure</groupId>  
         <artifactId>azure-webapp-maven-plugin</artifactId>  
