--- a/pom.xml
+++ b/pom.xml
@@ -68,16 +68,7 @@
       <version>3.0.0</version> 
     </dependency> 
   </dependencies>  
-  <build>
-    <resources> 
-      <resource> 
-        <directory>src/main/java</directory>  
-        <includes> 
-          <include>**/*.xml</include>  
-          <include>**/*.config</include> 
-        </includes> 
-      </resource> 
-    </resources>  
+  <build> 
     <plugins> 
       <plugin> 
         <groupId>org.springdoc</groupId>  
@@ -105,31 +96,31 @@
         <groupId>com.microsoft.azure</groupId>  
         <artifactId>azure-webapp-maven-plugin</artifactId>  
         <version>1.12.0</version>  
-        <configuration> 
-          <schemaVersion>v2</schemaVersion>  
-          <subscriptionId>93dda634-0186-4238-aea8-c146df85fda0</subscriptionId>  
-          <resourceGroup>SocialNetwork-resource</resourceGroup>  
-          <appName>SocialNetworkMini</appName>  
-          <pricingTier>S1</pricingTier>  
-          <region>southeastasia</region>  
-          <appServicePlanName>ServicePlan1427ccb0-57bb-4286</appServicePlanName>  
-          <appServicePlanResourceGroup>SocialNetwork-resource</appServicePlanResourceGroup>  
-          <runtime> 
-            <os>Windows</os>  
-            <javaVersion>Java 11</javaVersion>  
-            <webContainer>Java SE</webContainer> 
-          </runtime>  
-          <deployment> 
-            <resources> 
-              <resource> 
-                <directory>${project.basedir}/target</directory>  
-                <includes> 
-                  <include>*.jar</include> 
-                </includes> 
-              </resource> 
-            </resources> 
-          </deployment> 
-        </configuration> 
+        <configuration>
+          <schemaVersion>v2</schemaVersion>
+          <subscriptionId>93dda634-0186-4238-aea8-c146df85fda0</subscriptionId>
+          <resourceGroup>SocialNetwork-resource</resourceGroup>
+          <appName>SocialNetworkNT</appName>
+          <pricingTier>S1</pricingTier>
+          <region>southeastasia</region>
+          <appServicePlanName>ServicePlanca89061c-e03e-4188</appServicePlanName>
+          <appServicePlanResourceGroup>SocialNetwork-resource</appServicePlanResourceGroup>
+          <runtime>
+            <os>Windows</os>
+            <javaVersion>Java 11</javaVersion>
+            <webContainer>Java SE</webContainer>
+          </runtime>
+          <deployment>
+            <resources>
+              <resource>
+                <directory>${project.basedir}/target</directory>
+                <includes>
+                  <include>*.jar</include>
+                </includes>
+              </resource>
+            </resources>
+          </deployment>
+        </configuration>
       </plugin> 
     </plugins> 
   </build> 
