--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
     </dependency> 
   </dependencies>  
   <build> 
+    <finalName>app</finalName>  
     <resources> 
       <resource> 
         <directory>src/main/java</directory>  
