--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
   <parent> 
     <groupId>org.springframework.boot</groupId>  
     <artifactId>spring-boot-starter-parent</artifactId>  
-    <version>2.4.0</version>
+    <version>2.4.0</version>  
     <relativePath/>  
     <!-- lookup parent from repository --> 
   </parent>  
   <groupId>com.example</groupId>  
   <artifactId>demo</artifactId>  
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <version>0.0.1-SNAPSHOT</version>  
+  <packaging>jar</packaging>  
   <name>demo</name>  
   <description>Demo project for Spring Boot</description>  
   <properties> 
@@ -114,7 +114,7 @@
           <pricingTier>S1</pricingTier>  
           <region>southeastasia</region>  
           <runtime> 
-            <os>Windows</os>  
+            <os>Linux</os>  
             <javaVersion>Java 11</javaVersion>  
             <webContainer>Java SE</webContainer> 
           </runtime>  
