--- a/pom.xml
+++ b/pom.xml
@@ -103,40 +103,40 @@
         <groupId>org.springframework.boot</groupId>  
         <artifactId>spring-boot-maven-plugin</artifactId> 
       </plugin>  
-      <plugin> 
-        <groupId>com.microsoft.azure</groupId>  
-        <artifactId>azure-webapp-maven-plugin</artifactId>  
-        <version>1.12.0</version>  
-        <configuration> 
-          <schemaVersion>v2</schemaVersion>  
-          <resourceGroup>SocialNetwork-resource</resourceGroup>  
-          <appName>SocialNetworkV1</appName>  
-          <pricingTier>B1</pricingTier>  
-          <region>southeastasia</region>  
-          <runtime> 
-            <os>Linux</os>  
-            <javaVersion>Java 11</javaVersion>  
-            <webContainer>Java SE</webContainer> 
-          </runtime>  
-          <!--          <appSettings>-->  
-          <!--            <property>-->  
-          <!--              <name>JAVA_OPTS</name>-->  
-          <!--              <value>-Dserver.port=80</value>-->  
-          <!--            </property>-->  
-          <!--          </appSettings>-->  
-          <deployment> 
-            <resources> 
-              <resource> 
-                <directory>${project.basedir}/target</directory>  
-                <filtering>false</filtering>  
-                <includes> 
-                  <include>*.jar</include> 
-                </includes> 
-              </resource> 
-            </resources> 
-          </deployment> 
-        </configuration> 
-      </plugin> 
+<!--      <plugin> -->
+<!--        <groupId>com.microsoft.azure</groupId>  -->
+<!--        <artifactId>azure-webapp-maven-plugin</artifactId>  -->
+<!--        <version>1.12.0</version>  -->
+<!--        <configuration>-->
+<!--          <schemaVersion>v2</schemaVersion>-->
+<!--          <resourceGroup>SocialNetwork-resource</resourceGroup>-->
+<!--          <appName>SocialNetworkV1</appName>-->
+<!--          <pricingTier>S1</pricingTier>-->
+<!--          <region>southeastasia</region>-->
+<!--          <runtime>-->
+<!--            <os>Linux</os>-->
+<!--            <javaVersion>Java 11</javaVersion>-->
+<!--            <webContainer>Java SE</webContainer> -->
+<!--          </runtime>-->
+<!--          &lt;!&ndash;          <appSettings>&ndash;&gt;  -->
+<!--          &lt;!&ndash;            <property>&ndash;&gt;  -->
+<!--          &lt;!&ndash;              <name>JAVA_OPTS</name>&ndash;&gt;  -->
+<!--          &lt;!&ndash;              <value>-Dserver.port=80</value>&ndash;&gt;  -->
+<!--          &lt;!&ndash;            </property>&ndash;&gt;  -->
+<!--          &lt;!&ndash;          </appSettings>&ndash;&gt;  -->
+<!--          <deployment> -->
+<!--            <resources> -->
+<!--              <resource> -->
+<!--                <directory>${project.basedir}/target</directory>  -->
+<!--                <filtering>false</filtering>  -->
+<!--                <includes> -->
+<!--                  <include>*.jar</include> -->
+<!--                </includes> -->
+<!--              </resource> -->
+<!--            </resources> -->
+<!--          </deployment> -->
+<!--        </configuration> -->
+<!--      </plugin> -->
     </plugins> 
   </build> 
 </project>
