--- a/pom.xml
+++ b/pom.xml
@@ -73,70 +73,57 @@
     <finalName>app</finalName>  
     <resources> 
       <resource> 
-        <directory>src/main/java</directory>  
-        <includes> 
-          <include>**/*.xml</include>  
-          <include>*.xml</include> 
-        </includes> 
-      </resource> 
+        <directory>src/main/java</directory>
+        <includes>
+          <include>*.xml</include>
+          <include>**/*.xml</include>
+        </includes>
+      </resource>
     </resources>  
     <plugins> 
-      <plugin> 
-        <groupId>org.springdoc</groupId>  
-        <artifactId>springdoc-openapi-maven-plugin</artifactId>  
-        <version>0.2</version>  
-        <executions> 
-          <execution> 
-            <phase>integration-test</phase>  
-            <goals> 
-              <goal>generate</goal> 
-            </goals> 
-          </execution> 
-        </executions>  
-        <configuration> 
-          <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>  
-          <outputFileName>openapi.json</outputFileName>  
-          <outputDir>${project.build.directory}</outputDir> 
-        </configuration> 
-      </plugin>  
+      <plugin>
+        <groupId>org.springdoc</groupId>
+        <artifactId>springdoc-openapi-maven-plugin</artifactId>
+        <version>1.1</version>
+      </plugin>
       <plugin> 
         <groupId>org.springframework.boot</groupId>  
         <artifactId>spring-boot-maven-plugin</artifactId> 
       </plugin>  
-      <plugin> 
-        <groupId>com.microsoft.azure</groupId>  
-        <artifactId>azure-webapp-maven-plugin</artifactId>  
-        <version>1.12.0</version>  
-        <configuration> 
-          <schemaVersion>v2</schemaVersion>  
-          <resourceGroup>SocialNetwork-resource</resourceGroup>  
-          <appName>SocialNetworkV2</appName>  
-          <pricingTier>S1</pricingTier>  
-          <region>southeastasia</region>  
-          <runtime> 
-            <os>Windows</os>  
-            <javaVersion>Java 11</javaVersion>  
-            <webContainer>Java SE</webContainer> 
-          </runtime>  
-          <!--          <appSettings>-->  
-          <!--            <property>-->  
-          <!--              <name>JAVA_OPTS</name>-->  
-          <!--              <value>-Dserver.port=80</value>-->  
-          <!--            </property>-->  
-          <!--          </appSettings>-->  
-          <deployment> 
-            <resources> 
-              <resource> 
-                <directory>${project.basedir}/target</directory>  
-                <filtering>false</filtering>  
-                <includes> 
-                  <include>*.jar</include> 
-                </includes> 
-              </resource> 
-            </resources> 
-          </deployment> 
-        </configuration> 
-      </plugin> 
+<!--      <plugin> -->
+<!--        <groupId>com.microsoft.azure</groupId>  -->
+<!--        <artifactId>azure-webapp-maven-plugin</artifactId>  -->
+<!--        <version>1.12.0</version>  -->
+<!--        <configuration> -->
+<!--          <schemaVersion>v2</schemaVersion>  -->
+<!--          <resourceGroup>SocialNetwork-resource</resourceGroup>  -->
+<!--          <appName>SocialNetworkV2</appName>  -->
+<!--          <pricingTier>S1</pricingTier>  -->
+<!--          <region>southeastasia</region>  -->
+<!--          <runtime> -->
+<!--            <os>Windows</os>  -->
+<!--            <javaVersion>Java 11</javaVersion>  -->
+<!--            <webContainer>Java SE</webContainer> -->
+<!--          </runtime>  -->
+<!--          &lt;!&ndash;          <appSettings>&ndash;&gt;  -->
+<!--          &lt;!&ndash;            <property>&ndash;&gt;  -->
+<!--          &lt;!&ndash;              <name>JAVA_OPTS</name>&ndash;&gt;  -->
+<!--          &lt;!&ndash;              <value>-Dserver.port=80</value>&ndash;&gt;  -->
+<!--          &lt;!&ndash;            </property>&ndash;&gt;  -->
+<!--          &lt;!&ndash;          </appSettings>&ndash;&gt;  -->
+<!--          <deployment> -->
+<!--            <resources> -->
+<!--              <resource> -->
+<!--                <directory>${project.basedir}/target</directory>  -->
+<!--                <filtering>false</filtering>  -->
+<!--                <includes> -->
+<!--                  <include>*.jar</include> -->
+<!--                </includes> -->
+<!--              </resource> -->
+<!--            </resources> -->
+<!--          </deployment> -->
+<!--        </configuration> -->
+<!--      </plugin> -->
     </plugins> 
   </build> 
 </project>
